objects/alm_qa__Test_Case__c.object
<CustomObject>
 <fullName>alm_qa__Test_Case__c</fullName>
 <description>A library of test scripts that can be used to test against various functions, features and  apex resources like Apex Class and Apex Triggers.</description>
 <fields>
  <fullName>User_Story__c</fullName>
  <deleteConstraint>SetNull</deleteConstraint>
  <label>User Story</label>
  <referenceTo>alm_pm2__Backlog__c</referenceTo>
  <relationshipLabel>Test Scripts</relationshipLabel>
  <relationshipName>Test_Scripts</relationshipName>
  <type>Lookup</type>
 </fields>
 <fields>
  <fullName>alm_qa__Automated__c</fullName>
  <defaultValue>false</defaultValue>
  <inlineHelpText>Set to true if the test case has an automated script version.</inlineHelpText>
  <label>Automated</label>
  <type>Checkbox</type>
 </fields>
 <fields>
  <fullName>alm_qa__Description__c</fullName>
  <inlineHelpText>Basic description of the test script purpose and steps.</inlineHelpText>
  <label>Description</label>
  <length>32768</length>
  <type>LongTextArea</type>
 </fields>
 <fields>
  <fullName>alm_qa__Regression_Test__c</fullName>
  <defaultValue>false</defaultValue>
  <inlineHelpText>Is this test case a regression test?</inlineHelpText>
  <label>Regression Test</label>
  <type>Checkbox</type>
 </fields>
 <label>Test Script</label>
 <listViews>
  <fullName>alm_qa__All</fullName>
  <columns>NAME</columns>
  <columns>alm_qa__Description__c</columns>
  <filterScope>Everything</filterScope>
  <label>All</label>
 </listViews>
 <listViews>
  <fullName>alm_qa__All1</fullName>
  <filterScope>Everything</filterScope>
  <label>All</label>
 </listViews>
 <nameField>
  <displayFormat>TestScript-{00000}</displayFormat>
  <label>Test Script</label>
  <type>AutoNumber</type>
 </nameField>
 <pluralLabel>Test Scripts</pluralLabel>
 <sharingModel>ReadWrite</sharingModel>
</CustomObject>